fix nav bar z-index issue and add github link

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 15px;
     padding: 30px 0 165px;
     width: 100%;
 
