--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -5,6 +5,7 @@
 
   .splash {
     position: relative;
+    z-index: 1;
 
     .banner {
       padding: 20px;
