--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 $meta-color: #656565;
-$mobile-break: 850px;
+$mobile-break: 875px;
 $font-family: 'IBM Plex Sans', sans-serif;
 
 @mixin mobile {
